--- a/Assignment4_OurOwnApp/src/Styles/index.css
+++ b/Assignment4_OurOwnApp/src/Styles/index.css
@@ -1,195 +1,17 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Sansation:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
 
-body{
+body {
     font-family: "Sansation", sans-serif;
+    margin: 0;
 }
 
 input {
-  border: none;       /* removes default border */
-  outline: none;      /* removes focus outline */
-}
-
-/* Header-CSS */
-#headerContainer {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: rgba(236, 245, 253, 0.541);
-}
-
-#logo{
-    width: 100px;
-    cursor: pointer;
-}
-
-#categoriesListContainer {
-    display: flex;
-    list-style: none;
-}
-
-#categoriesListContainer > li {
-    padding: 0px 30px;
-    cursor: pointer;
-}
-
-#actionsContainer{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-#actionsContainer > div >img{
-    width: 25px;
-    margin: 20px;
-    margin-top: 25px;
-     cursor: pointer;
-}
-
-
-/* content-CSS */
-#contentContainer{
-    display: flex;
-    flex-wrap: wrap;
-    padding-top: 20px;
-    justify-content: center;
-}
-
-#imgDressCard{
-   width: 100%;
-   height: 400px;
-       border-radius: 5px;
-}
-
-#dressCard{
-    width: 300px;
-    margin: 20px;
-    cursor: pointer;
-    border-radius: 5px;
-}
-
-#dressCard:hover{
-    box-shadow: 0px 0px 15px rgba(117, 117, 117, 0.541);
-}
-#price > span {
-    margin: 5px;
-    font-size: 13px;
-}
-
-#mrp{
-    text-decoration: line-through;
-}
-#brand{
-    color: rgb(97, 97, 97);
-}
-#discountPercentage{
-    color: rgb(245, 159, 173);
-}
-#productName{
-     font-size: 15px;
-     color: rgb(112, 112, 112);
-}
-#infoDressCard{
-    margin-left: 10px;
-}
-
-
-
-#filterContainer{
-    position: relative;
-}
-#filterImg{
-    width: 20px;
-    padding: 5px;
-}
-
-
-#filterBtn{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: rgb(222, 247, 247);
-    border: 1px solid rgba(134, 134, 134, 0.63);
-    border-radius: 2px;
-    padding-right: 10px;
-    margin-top: 10px;
-    margin-right: 20px;
-    cursor: pointer;
-}
-
-#filterBtnContainer{
-    display: flex;
-    justify-content: flex-end;
-}
-
-#filterDialogContainer{
-    border: 1px solid rgb(245, 207, 199);
-    color: #4B2E2E;
-    top: 50px;
-    right: 0px;
-    width: 40vb;
-    height: 70vh;
-    background-color: rgba(245, 207, 199, 0.906);
-    border-radius: 10px;
-    position: absolute;
-    overflow-x: auto;
-    display: flex;
-    flex-direction: column;
-
-}
-#filterList{
-    padding-bottom: 20px;
-}
-#checkBoxContainer{
-    margin: 8px;
-}
-
-.filterCheckBox{
-    margin: 8px;
-}
-
-#filterActionbtnContainer{
-    display: flex;
-    background-color: white;
-    width: 100%;
-    height: 50px;
-    justify-content: space-evenly;
-    align-items: center;
-    position: sticky;
-    bottom: 0px;
-}
-
-.filterActionBtn{
-    padding: 8px;
-    background-color: rgba(202, 51, 21, 0.906);
     border: none;
-    border-radius: 5px;
-    color: white;
-    cursor: pointer;
+    /* removes default border */
+    outline: none;
+    /* removes focus outline */
 }
 
-
-#searchBox{
-    border: 1px solid #5fa4efa7;
-    border-radius: 3px;
-    margin-left: 40%;
-    height: 35px;
-    width: 20%;
-    margin-top: 30px;
-    padding-left: 10px;
-}
-
-
-#searchBox::placeholder{
-    color: #bcbcbcc8;;
-}
-#searchBox:focus {
-  border: 1px solid #8c8c8c;
-  box-shadow: 0 0 5px rgba(149, 149, 149, 0.391);
-  background-color: rgba(236, 245, 253, 0.541);
-}
-#subHeader{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+a {
+    all: unset;
 }
